tests/errors/test_26.x
// Do while conditional is not boolean

fn main() -> void {

    do {

    } while 'c';

}